other-vpol/deny-commands-in-exec-probe/.chainsaw-test/podcontrollers-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        livenessProbe:
          exec:
            command:
            - ls
          periodSeconds: 10
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox02
        livenessProbe:
          exec:
            command:
            - uptime
          periodSeconds: 10
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox
            livenessProbe:
              exec:
                command:
                - echo
                - foo
              periodSeconds: 10
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox02
            livenessProbe:
              exec:
                command:
                - ps
                - aus
              periodSeconds: 10
          restartPolicy: OnFailure
