other-vpol/deny-commands-in-exec-probe/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      livenessProbe:
        exec:
          command:
          - ls
        periodSeconds: 10
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      livenessProbe:
        exec:
          command:
          - uptime
        periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      livenessProbe:
        exec:
          command:
          - ps
          - aux
        periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      livenessProbe:
        exec:
          command:
          - jcmd
        periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      livenessProbe:
        exec:
          command:
          - echo
          - jcmd
          - echo
          - hello
        periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      livenessProbe:
        exec:
          command:
          - echo
          - $(jcmd)
          - echo
        periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      livenessProbe:
        exec:
          command:
          - "echo bar"
          - "echo ls foo"
          - "echo bar"
        periodSeconds: 10
