other-vpol/deny-commands-in-exec-probe/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: deny-commands-in-exec-probe
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../deny-commands-in-exec-probe.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: deny-commands-in-exec-probe
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy deny-commands-in-exec-probe failed')): true
        file: pods-bad.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy deny-commands-in-exec-probe failed')): true
        file: podcontrollers-bad.yaml
